# ORB_SLAM2-PythonBindings

./: .gitignore  CMakeLists.txt  LICENSE  README.md  orbslam-changes.diff
ORB_SLAM2 changes/: System.cc  System.h
cmake_modules/: FindNumPy.cmake  FindORB_SLAM2.cmake
examples/: orbslam_mono_euroc.py  orbslam_mono_kitti.py  orbslam_mono_tum.py  orbslam_rgbd_tum.py  orbslam_stereo_euroc.py  orbslam_stereo_kitti.py
src/: ORBSlamPython.cpp  ORBSlamPython.h
tests/src/: TestORBSlamPython.cpp
